name:                project-euler
version:             0.1.0.0
synopsis:            Solutions to Project Euler problems.
license:             BSD3
license-file:        LICENSE
author:              Guillaume Nargeot
maintainer:          guillaume@nargeot.com
copyright:           (c) Guillaume Nargeot 2014
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.9.2

source-repository head
  type: git
  location: git://github.com/guillaume-nargeot/project-euler-haskell.git

executable problem
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       arithmoi, base, combinat, containers, digits, memoize, primes, NumberSieves
  ghc-options:         -Wall -Werror -O2

test-suite test-all
  hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  main-is:             TestAll.hs
  build-depends:       arithmoi, base, combinat, containers, digits, memoize, primes, NumberSieves, HUnit, Cabal >= 1.9.2
  ghc-options:         -Wall -Werror -O2
