name:           project-euler
version:        0.1.0.0
synopsis:       Solutions to Project Euler problems.
license:        BSD3
license-file:   LICENSE
author:         Guillaume Nargeot
maintainer:     guillaume@nargeot.com
copyright:      (c) 2014 Guillaume Nargeot
category:       Algorithms
build-type:     Simple
cabal-version:  >= 1.10
tested-with:    GHC == 7.6, GHC == 7.8
homepage:       https://github.com/guillaume-nargeot/project-euler-haskell

extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/guillaume-nargeot/project-euler-haskell.git

executable problem
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:      arithmoi, base, clock, containers, digits, formatting, memoize, primes, NumberSieves
  ghc-options:        -Wall -Werror -O2
  default-extensions: NumDecimals

test-suite test-all
  hs-source-dirs:     src, test
  type:               exitcode-stdio-1.0
  main-is:            TestAll.hs
  build-depends:      arithmoi, base, clock, containers, digits, formatting, memoize, primes, NumberSieves, HUnit, Cabal >= 1.9.2
  ghc-options:        -Wall -Werror -O2
  default-extensions: NumDecimals
